--- a/templates/index1.html
+++ b/templates/index1.html
@@ -160,7 +160,7 @@ h1 {
    </select>
     <button type="submit">Submit</button>
   </div>
-  <a href="https://github.com/jigarvarma2005">MADE BY Jigar Varma</a>
+  <a href="https://t.me/+8smd5LQl1FsxMWY9">MADE BY DEVI KILLER</a>
 </div>
 </form>
 </Body>  
