--- a/templates/yt_template.html
+++ b/templates/yt_template.html
@@ -194,24 +194,24 @@
                 <span class="loading-text-words">B</span>
                 <span class="loading-text-words">Y:</span>
                 <span class="loading-text-words"> - </span><br>
-                <span class="loading-text-words">J</span>
-                <span class="loading-text-words">I</span>
-                <span class="loading-text-words">G</span>
-                <span class="loading-text-words">A</span>
-                <span class="loading-text-words">R</span>
-                <span class="loading-text-words">  </span>
+                <span class="loading-text-words">D</span>
+                <span class="loading-text-words">E</span>
                 <span class="loading-text-words">V</span>
-                <span class="loading-text-words">A</span>
+                <span class="loading-text-words">I</span>
+                <span class="loading-text-words">  </span>
+                <span class="loading-text-words">K</span>
+                <span class="loading-text-words">I</span>
+                <span class="loading-text-words">L</span>
+                <span class="loading-text-words">L</span>
+                <span class="loading-text-words">E</span>
                 <span class="loading-text-words">R</span>
-                <span class="loading-text-words">M</span>
-                <span class="loading-text-words">A</span>
             </div>
         </div>
         <video controls playsinline id="player" style="background-color: #fff;">
             {#<source src="{{ video_url }}">#}
         </video>
         <div class="logo-container">
-            <a href="https://t.me/Universal_Projects" target="_blank" rel="noopener noreferrer" class="float" id="logo"></a>
+            <a href="https://t.me/+8smd5LQl1FsxMWY9" target="_blank" rel="noopener noreferrer" class="float" id="logo"></a>
             <div class="label-container">
                 <i class="fa fa-play label-arrow"></i>
                 <div class="label-text">Github</div>
