--- a/templates/temp.html
+++ b/templates/temp.html
@@ -3,7 +3,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-        <link rel="icon" type="image/png" href="https://telegra.ph/file/e2455272b9ec28c09500e.png">
+        <link rel="icon" type="image/png" href="https://telegra.ph/file/875e138ad5d70027c5f4f.jpg">
         <link rel="stylesheet" href="https://cdn.plyr.io/3.6.12/plyr.css" />
         <script "text/javascript" src="https://cdn.plyr.io/3.6.12/plyr.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Poppins|Quattrocento+Sans" rel="stylesheet"/>
