--- a/templates/mpd.html
+++ b/templates/mpd.html
@@ -10,7 +10,7 @@
         <script "text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dashjs/3.1.3/dash.all.min.js"></script>
         <script "text/javascript" src="https://cdn.jsdelivr.net/npm/hls.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-        <title>mpd Player || Jigar Varma</title>
+        <title>mpd Player || Devi Killer</title>
         <style type="text/css" media="screen">
             html {
                 font-family: Poppins;
@@ -30,7 +30,7 @@
 
             #logo {
                 position: fixed;
-                background-image: url("https://telegra.ph/file/e2455272b9ec28c09500e.png");
+                background-image: url("https://telegra.ph/file/875e138ad5d70027c5f4f.jpg");
                 background-size: cover;
                 background-position: center;
             }
