--- a/templates/m3u8.html
+++ b/templates/m3u8.html
@@ -27,7 +27,7 @@ html {
 
             #logo {
                 position: fixed;
-                background-image: url("https://telegra.ph/file/e2455272b9ec28c09500e.png");
+                background-image: url("https://telegra.ph/file/875e138ad5d70027c5f4f.jpg");
                 background-size: cover;
                 background-position: center;
             }
