--- a/templates/index1.html
+++ b/templates/index1.html
@@ -140,10 +140,11 @@ h1 {
 
 </Head>  
 <Body>  
+Hi Everyone Welcome To Devi Killer Video Player
 <form action="/checker" method="GET">
 <div class="container">
   <div class="brand-logo"></div>
-  <div class="brand-title">Video Player</div>
+  <div class="brand-title">Video Player By Devi Killer</div>
   <div class="inputs">
     <label>Enter Link</label>
     <input type="text" name="id" placeholder="Enter Your Link or Video id Here" required />
@@ -162,6 +163,6 @@ h1 {
   </div>
   <a href="https://t.me/+8smd5LQl1FsxMWY9">MADE BY DEVI KILLER</a>
 </div>
-</form>
+</form> 
 </Body>  
 </Html>
