--- a/templates/index1.html
+++ b/templates/index1.html
@@ -140,7 +140,7 @@ h1 {
 
 </Head>  
 <Body>  
-Hi Everyone Welcome To Devi Killer Video Player
+<header>Hi Everyone Welcome To Devi Killer Video Player<header>
 <form action="/checker" method="GET">
 <div class="container">
   <div class="brand-logo"></div>
