--- a/templates/index1.html
+++ b/templates/index1.html
@@ -142,6 +142,7 @@ h1 {
 
 </Head>  
 <Body>  
+<P>Hi Welcome To Dump Cloud Year By Team X R <p>
 <form action="/checker" method="GET">
 <div class="container">
   <div class="brand-logo"></div>
